# Jarvis-for-Developers

./: .env.example  .env.production  .eslintrc.js  .gitignore  .prettierignore  README.md  RUN_CMD.md  SETUP_README.md  alembic.ini  debug_auth.py  docker-compose.yml  package.json  pnpm-lock.yaml  test_auth.py  test_backend.py  test_headers.py  test_voice_system.py  turbo.json
apps/api/: Dockerfile  config.py  create_test_users.py  gateway.py  init_db.py  main.py  mock_backend.py  pyproject.toml  requirements.txt  seed_db.py  simple_main.py  simple_test_users.py
apps/api/agents/: base_agent.py  orchestrator.py  specialized_agents.py
apps/api/database/: connection.py  schema.sql
apps/api/gateway/: Dockerfile  main.py
apps/api/middleware/: rbac.py
apps/api/models/: agents.py  ai_stream.py  ai_suggestion.py  analytics.py  billing.py  bugs.py  deploy_config.py  editor_session.py  github.py  organization.py  repo_memory.py  user.py
apps/api/routes/: agents.py  agents_orchestrator.py  ai_bugs.py  analytics.py  auth.py  autocode.py  billing.py  devops.py  editor.py  editor_collab.py  gesture.py  github.py  org.py  project.py  repo.py  stripe_webhook.py  vision.py  voice.py
apps/api/services/: ai_agents.py  ai_streaming_service.py  analytics_service.py  auth_service.py  auto_fix_service.py  billing_service.py  bug_detection_service.py  code_review_service.py  embedding_service.py  gesture_service.py  github_service.py  oauth_service.py  org_service.py  repo_indexer.py  search_service.py  usage_tracker.py  vision_agent_service.py  vision_service.py  voice_service.py
(+167 files in other folders)
